NXT-510 Remove spacing issue fixes from Storyblok components and apply them to category landing pages only

--- a/web/src/components/Storyblok/CategoryLandingPage/CategoryLandingPage.module.scss
+++ b/web/src/components/Storyblok/CategoryLandingPage/CategoryLandingPage.module.scss
@@ -1,14 +1,21 @@
+/* stylelint-disable selector-class-pattern */
 
 .categoryLandingPage {
   // page overrides for DS components
-  /* stylelint-disable-next-line selector-class-pattern */
+
   :global(.action-banner--full-width) {
     margin-bottom: 0;
   }
 
-  /* stylelint-disable-next-line selector-class-pattern */
   :global(.action-banner--full-width-subtle) {
     margin-bottom: 0;
   }
 
+  :global(.page-header) {
+    margin-bottom: 0;
+  }
+
+  :global(.hero) {
+    margin-bottom: 0;
+  }
 }
