--- a/web/src/components/Storyblok/StoryblokHero/StoryblokHero.module.scss
+++ b/web/src/components/Storyblok/StoryblokHero/StoryblokHero.module.scss
@@ -5,8 +5,3 @@
     width: 66%;
   }
 }
-
-.hero {
-  margin-bottom: 0;
-}
-
